samples/_failures_safe/1761417755_edae3e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3fde53f5.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_3fde53f5.c:145:13: error: expected declaration or statement at end of input
  145 |             if (graph->edges[i].src == u) {
      |             ^~
./samples/SAFE/__tmp_3fde53f5.c:145:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_3fde53f5.c:145:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_3fde53f5.c:145:13: error: expected declaration or statement at end of input
